task: setting dev

--- a/find_pharmacy/src/main/resources/application.yml
+++ b/find_pharmacy/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   profiles:
     active: local # default
+    group:
+      local:
+        - common
+      prod:
+        - common
 
 ---
 spring:
