--- a/find_pharmacy/src/main/resources/application.yml
+++ b/find_pharmacy/src/main/resources/application.yml
@@ -12,6 +12,17 @@ spring:
   config:
     activate:
       on-profile: common
+
+kakao:
+  rest:
+    api:
+      key: ${REST_API_KEY}
+
+---
+spring:
+  config:
+    activate:
+      on-profile: local
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/pharmacy-recommendation
@@ -24,12 +35,6 @@ spring:
     hibernate:
       ddl-auto: create
     show-sql: true
-
----
-spring:
-  config:
-    activate:
-      on-profile: local
 
 ---
 spring:
