--- a/find_pharmacy/build.gradle
+++ b/find_pharmacy/build.gradle
@@ -35,6 +35,16 @@ dependencies {
 	testImplementation 'org.testcontainers:spock:1.17.1'
 	testImplementation 'org.testcontainers:mariadb:1.17.1'
 
+	// spring retry
+	implementation 'org.springframework.retry:spring-retry'
+
+	// handlebars
+	implementation 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.4'
+
+	// mockWebServer
+	testImplementation('com.squareup.okhttp3:okhttp:4.10.0')
+	testImplementation('com.squareup.okhttp3:mockwebserver:4.10.0')
+
 	// spock
 	testImplementation('org.spockframework:spock-core:2.1-groovy-3.0')
 	testImplementation('org.spockframework:spock-spring:2.1-groovy-3.0')
