--- a/find_pharmacy/build.gradle
+++ b/find_pharmacy/build.gradle
@@ -35,8 +35,15 @@ dependencies {
 	testImplementation 'org.testcontainers:spock:1.17.1'
 	testImplementation 'org.testcontainers:mariadb:1.17.1'
 
+	implementation 'com.opencsv:opencsv:4.3'
+	// https://github.com/seruco/base62
+	implementation 'io.seruco.encoding:base62:0.1.3'
+
 	// spring retry
 	implementation 'org.springframework.retry:spring-retry'
+
+	// redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 	// handlebars
 	implementation 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.4'
