--- a/find_pharmacy/src/main/resources/application.yml
+++ b/find_pharmacy/src/main/resources/application.yml
@@ -36,8 +36,29 @@ spring:
       ddl-auto: validate
     show-sql: true
 
+pharmacy:
+  recommendation:
+    base:
+      url: http://localhost:8080/dir/
+
 ---
 spring:
   config:
     activate:
       on-profile: prod
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://pharmacy-recommendation-database:3306/pharmacy-recommendation
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+  redis:
+    host: pharmacy-recommendation-redis
+    port: 6379
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    show-sql: true
+pharmacy:
+  recommendation:
+    base:
+      url: http://pharmacy-recommendation-app:8080/dir/
